Repaired broken styles in 404 error page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,94 +587,118 @@ footer h6 {
 
 
 /*--------------------------------------------  404 Error Page (https://colorlib.com) */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
 #notfound {
-    position: relative;
-    height: 100vh;
+  position: relative;
+  height: 100vh;
+  background: #030005;
 }
 
 #notfound .notfound {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%)
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .notfound {
-    max-width: 767px;
-    width: 100%;
-    line-height: 1.4;
-    text-align: center
+  max-width: 767px;
+  width: 100%;
+  line-height: 1.4;
+  text-align: center;
 }
 
 .notfound .notfound-404 {
-    position: relative;
-    height: 180px;
-    margin-bottom: 20px;
-    z-index: -1;
+  position: relative;
+  height: 180px;
+  margin-bottom: 20px;
+  z-index: -1;
 }
 
 .notfound .notfound-404 h1 {
-    font-family: 'Montserrat', sans-serif;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    font-size: 200px;
-    font-weight: 900;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: -12px;
-    color: #fe5e7c96;
-    text-transform: uppercase;
-    text-shadow: -1px -1px 0px #e6d8e059, 1px 1px 0px #a5e8e8;
-    letter-spacing: -20px;
+  font-family: 'Montserrat', sans-serif;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50% , -50%);
+      -ms-transform: translate(-50% , -50%);
+          transform: translate(-50% , -50%);
+  font-size: 224px;
+  font-weight: 900;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: -12px;
+  color: #030005;
+  text-transform: uppercase;
+  text-shadow: -2px -2px 0px #69aaab, 1px 1px 0px #ff005a;
+  letter-spacing: -20px;
 }
 
+
 .notfound .notfound-404 h2 {
-    font-family: 'Playfair Display', serif;
-    font-style: normal;
-    position: relative;
-    left: 20px;
-    right: 20px;
-    top: -40px;
-    font-weight: 800;
-    color: #000106;
-    text-transform: uppercase;
-    text-shadow: 0px 1px 0px #74b2e0;
-    letter-spacing: 8px;
-    margin: 0;
-    font-size: 28px;
-    font-size: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 110px;
+  font-size: 42px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 0px #69aaab;
+  letter-spacing: 13px;
+  margin: 0;
 }
 
 .notfound a {
-    font-family: 'Montserrat', sans-serif;
-    display: inline-block;
-    text-transform: uppercase;
-    color: #000106;
-    text-decoration: none;
-    border: 2px solid;
-    background: 0 0;
-    padding: 10px 40px;
-    font-size: 14px;
-    font-weight: 700;
-    -webkit-transition: .2s all;
-    -o-transition: .2s all;
-    transition: .2s all
+  font-family: 'Montserrat', sans-serif;
+  display: inline-block;
+  text-transform: uppercase;
+  color: #ff005a;
+  text-decoration: none;
+  border: 2px solid;
+  background: transparent;
+  padding: 10px 40px;
+  font-size: 14px;
+  font-weight: 700;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .notfound a:hover {
-    background-color: #90bfc0;
-    border-color: transparent;
-    color: #f2f2f2;
+  background-color: #69aaab;
+  border-color: transparent;
+  color: #fff;
 }
 
 a.button:hover {
-    background-color: #d59cad;
-    border-color: transparent;
-    color: #F2F2F2;
+  background-color: #ff005a;
+  border-color: transparent;
+  color: #fff;
+}
+
+@media only screen and (max-width: 767px) {
+    .notfound .notfound-404 h2 {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+  .notfound .notfound-404 h1 {
+      font-size: 182px;
+  }
 }
